<resources>
    <string name="app_name">Crypted Mail</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="fullname">Fullname</string>
    <string name="email">Email</string>
    <string name="sign_up">Sign Up</string>
    <string name="navigation_open">Open</string>
    <string name="navigation_close">Close</string>
</resources>