<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/createAnAccountText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:gravity="center"
            android:textSize="30dp"
            android:fontFamily="@font/poppinsbold"
            android:text="Create an Account"
            android:textColor="@color/blue1"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_editor_absoluteX="30dp" />

        <EditText
            android:id="@+id/txt_fullname"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="50dp"
            android:hint="@string/fullname"
            android:inputType="text"
            android:textSize="15dp"
            android:fontFamily="@font/poppinsmedium"
            android:drawableRight="@drawable/ic_fullname"
            app:layout_constraintTop_toBottomOf="@+id/createAnAccountText"
            tools:layout_editor_absoluteX="30dp" />

        <EditText
            android:id="@+id/txt_username"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="30dp"
            android:hint="@string/username"
            android:inputType="text"
            android:textSize="15dp"
            android:fontFamily="@font/poppinsmedium"
            android:drawableRight="@drawable/ic_username"
            app:layout_constraintTop_toBottomOf="@+id/txt_fullname"
            tools:layout_editor_absoluteX="30dp" />

        <EditText
            android:id="@+id/txt_email"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="30dp"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textSize="15dp"
            android:fontFamily="@font/poppinsmedium"
            android:drawableRight="@drawable/ic_email"
            app:layout_constraintTop_toBottomOf="@+id/txt_username"
            tools:layout_editor_absoluteX="30dp" />

        <EditText
            android:id="@+id/txt_password"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="30dp"
            android:layout_marginHorizontal="30dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textSize="15dp"
            android:fontFamily="@font/poppinsmedium"
            android:drawableRight="@drawable/ic_password"
            app:layout_constraintTop_toBottomOf="@+id/txt_email"
            tools:layout_editor_absoluteX="30dp" />

        <ProgressBar
            android:id="@+id/progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_password" />

        <Button
            android:id="@+id/btn_SignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:backgroundTint="@color/blue1"
            android:textSize="15dp"
            android:fontFamily="@font/poppinsmedium"
            android:text="@string/sign_up"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/progress" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>