<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/loginText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="150dp"
            android:gravity="center"
            android:textSize="30dp"
            android:fontFamily="@font/poppinsbold"
            android:text="LOGIN"
            android:textColor="@color/blue1"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_editor_absoluteX="30dp" />

        <EditText
            android:id="@+id/txt_usernameLogin"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="50dp"
            android:hint="@string/username"
            android:inputType="text"
            android:textSize="15dp"
            android:fontFamily="@font/poppinsmedium"
            app:layout_constraintTop_toBottomOf="@+id/loginText"
            tools:layout_editor_absoluteX="30dp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginHorizontal="30dp"
            tools:ignore="MissingConstraints"
            app:passwordToggleEnabled="true"
            app:layout_constraintTop_toBottomOf="@+id/txt_usernameLogin"
            tools:layout_editor_absoluteX="30dp" >

            <EditText
                android:id="@+id/txt_passwordLogin"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:textSize="15dp"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:fontFamily="@font/poppinsmedium" />

        </com.google.android.material.textfield.TextInputLayout>

        <ProgressBar
            android:id="@+id/progressLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/password" />

        <Button
            android:id="@+id/btn_Login"
            android:backgroundTint="@color/blue1"
            android:textColor="@color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:textSize="15dp"
            android:fontFamily="@font/poppinsmedium"
            android:text="@string/login"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/progressLogin" />

        <TextView
            android:id="@+id/createAccount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:gravity="center"
            android:textSize="18dp"
            android:fontFamily="@font/poppinsmedium"
            android:text="Create Account"
            android:textColor="@color/blue1"
            tools:layout_editor_absoluteX="30dp"
            app:layout_constraintTop_toTopOf="@+id/btn_Login" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>